--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 body {
   background-color: #e3ded2;
 }
+.flex {
+  flex: 1 1 auto;
+}    
+
+.scrollable {
+   overflow: auto;
+   box-sizing: border-box;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+}
